Fix linebreaks in project descriptions (#34)

--- a/MyApp/Client/Components/ExpProjectBox.razor.css
+++ b/MyApp/Client/Components/ExpProjectBox.razor.css
@@ -31,3 +31,7 @@
 .Exp-Left-container {
   width: 300px;
 }
+
+.descriptionBox {
+  white-space: pre-wrap;
+}
